--- a/style.css
+++ b/style.css
@@ -35,7 +35,6 @@ h6 {
 
 html {
     height: 100%;
-    background: #23b499;
     font-family: Roboto;
     font-size: 16px;
     line-height: 1;
@@ -99,6 +98,11 @@ button:hover {
     min-height: 100%;
     display: flex;
     flex-direction: column;
+    max-width: 500px;
+    margin: 0 auto;
+    background: #23b499;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
 }
 
 .section-header,
